@@ -214,6 +214,7 @@ David Cinege
 Craig Citro
 Gilles Civario
 Chris Clark
+Laurie Clark-Michalek
 Mike Clarkson
 Andrew Clegg
 Brad Clements
